--- a/FaceDetection-2.ipynb
+++ b/FaceDetection-2.ipynb
@@ -242,13 +242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\u001b[1m\u001b[37mINFO   \u001b[0m] \u001b[36m__init__\u001b[0m:\u001b[36mget_config\u001b[0m:\u001b[36m71\u001b[0m - \u001b[1m\u001b[37mLoading config file from: /Users/arthurdesmazures/.labelmerc\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "# !labelme"
+    "!labelme"
    ]
   },
   {
@@ -364,27 +372,6 @@
    ],
    "source": [
     "images = tf.data.Dataset.list_files('data/images/*.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'images' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mimages\u001b[49m\u001b[38;5;241m.\u001b[39mas_numpy_iterator()\u001b[38;5;241m.\u001b[39mnext()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'images' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "images.as_numpy_iterator().next()"
    ]
   },
   {
@@ -659,24 +646,6 @@
    "outputs": [],
    "source": [
     "import albumentations as alb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# augmentor = alb.Compose([\n",
-    "#     alb.Resize(height=450, width=450),\n",
-    "#     alb.HorizontalFlip(p=0.5),\n",
-    "#     alb.RandomBrightnessContrast(p=0.2),\n",
-    "#     alb.RandomGamma(p=0.2),\n",
-    "#     alb.RGBShift(p=0.2),\n",
-    "#     alb.VerticalFlip(p=0.5)],\n",
-    "#     bbox_params=alb.BboxParams(format='albumentations', label_fields=['class_labels']))\n"
    ]
   },
   {
